# flights-watcher-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/flight_deal_watcher_mcp/: __init__.py  config.py  server.py
src/flight_deal_watcher_mcp/db/: models.py  repositories.py  schema.py  sqlite.py
src/flight_deal_watcher_mcp/providers/: __init__.py  base.py  mock_data.py  mock_provider.py
src/flight_deal_watcher_mcp/schemas/: __init__.py  tool_inputs.py  tool_outputs.py
src/flight_deal_watcher_mcp/services/: __init__.py  normalization.py  preference_service.py  watch_service.py
src/flight_deal_watcher_mcp/tools/: __init__.py  list_watched_routes.py  search_flights.py  set_travel_preferences.py  watch_route.py
src/flight_deal_watcher_mcp/utils/: logging.py  route_keys.py  time_utils.py  validation.py
