[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-deal-watcher-mcp"
version = "0.1.0"
description = "A beginner-friendly MCP server for monitoring flight deals with mock data and SQLite persistence."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "mcp[cli]>=1.26,<2",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
flight-deal-watcher-mcp = "flight_deal_watcher_mcp.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
